syntax = "proto3";
option go_package = "api_pb";
package com.github.ProgrammingLab.prolab_accounts.api;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

service UserProfileService {
  rpc ListUserProfiles (ListUserProfilesRequest) returns (ListUserProfilesResponse) {
    option (google.api.http) = {
      get: "/user_profiles"
    };
  }
  rpc GetUserProfile (GetUserProfileRequest) returns (UserProfile) {
    option (google.api.http) = {
      get: "/user_profiles/{user_profile_id}"
    };
  }
  rpc CreateUserProfile (CreateUserProfileRequest) returns (UserProfile) {
    option (google.api.http) = {
      post: "/user_profiles"
      body: "user_profile"
    };
  }
  rpc UpdateUserProfile (UpdateUserProfileRequest) returns (UserProfile) {
    option (google.api.http) = {
      patch: "/user_profiles/{user_profile.user_profile_id}"
      body: "user_profile"
    };
  }
  rpc DeleteUserProfile (DeleteUserProfileRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/user_profiles/{user_profile_id}"
    };
  }
}

message UserProfile {
  string user_profile_id = 1;
}

message ListUserProfilesRequest {
}

message ListUserProfilesResponse {
  repeated UserProfile user_profiles = 1;
}

message GetUserProfileRequest {
  string user_profile_id = 1;
}

message CreateUserProfileRequest {
  UserProfile user_profile = 1;
}

message UpdateUserProfileRequest {
  UserProfile user_profile = 1;
}

message DeleteUserProfileRequest {
  string user_profile_id = 1;
}
